@@ -1,3 +1,13 @@
+2013-05-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	Submitted by "Malte" and John McCorquodale:
+	patch #7876 JTAGICE mkII fails to connect to attiny if debugwire
+	is enabled AND target has a very slow clock
+	* jtagmkII.c (jtagmkII_getsync): When leaving debugWIRE mode
+	temporarily, immediately retry with ISP, rather than leaving.
+	* stk500v2 (stk500v2_program_enable): Implemented similar logic
+	for the JTAGICE3.
+
 2013-05-16  Rene Liebscher <R.Liebscher@gmx.de>
 
 	* configure.ac: reactivate check for TYPE_232H, which does not
